--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,7 @@ env:
 
 jobs:
   server:
-    name: Build Server
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     env:
       GO111MODULE: "on"
