--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ env:
 jobs:
   server:
     name: Build Server
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     env:
       GO111MODULE: "on"
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@master
 
       - name: Set version env
-        run: echo ::set-env name=SCRVER::$(git describe --always --long --dirty)
+        run: echo "SCRVER=$(git describe --always --long --dirty)" >> "$GITHUB_ENV"
 
       - name: Install Golang
         uses: actions/setup-go@v1
@@ -32,9 +32,9 @@ jobs:
 
       - name: Export bin paths
         run: |
-          echo ::set-env name=GOPATH::$(go env GOPATH)
-          echo ::set-env name=GOBIN::$(go env GOPATH)/bin
-          echo ::add-path::$(go env GOPATH)/bin
+          echo "GOPATH=$(go env GOPATH)" >> "$GITHUB_ENV"
+          echo "GOBIN=$(go env GOPATH)/bin" >> "$GITHUB_ENV"
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
           mkdir -p $(go env GOPATH)/bin
 
       - name: Install PostCSS CLI
@@ -96,7 +96,7 @@ jobs:
 
   client:
     name: Build Client
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -107,7 +107,7 @@ jobs:
         uses: actions/checkout@master
 
       - name: Set version env
-        run: echo ::set-env name=SCRVER::$(git describe --always --long --dirty)
+        run: echo "SCRVER=$(git describe --always --long --dirty)" >> "$GITHUB_ENV"
 
       - name: Setup SourcePawn Compiler ${{ matrix.sm-version }}
         id: setup-sp
@@ -154,7 +154,7 @@ jobs:
           node-version: "12.x"
 
       - name: Export npm bin path
-        run: export PATH=$PATH:$(npm bin -g)
+        run: echo "$(npm bin -g)" >> $GITHUB_PATH
 
       - name: Install yarn
         run: npm i -g yarn
