--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,8 @@ jobs:
           mkdir -p $(go env GOPATH)/bin
 
       - name: Install PostCSS CLI
-        run: npm i -g postcss-cli
+        # run: npm i -g postcss-cli
+        run: yarn i -g postcss-cli
 
       - name: Install Golang Dep
         run: curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
